--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "vue-event-transfer",
   "version": "1.0.0",
   "description": "组件 事件中转",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "https://github.com/dive2Pro/vue-event-transfer.git",
   "author": "1c <toylucklebo@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "rollup --config rollup.config.js"
+  },
   "dependencies": {
     "vue": "^2.5.17"
+  },
+  "devDependencies": {
+    "rollup": "^0.66.6"
   }
 }
